Updated Aex classs

--- a/force-app/main/default/classes/AccountProcessor.cls
+++ b/force-app/main/default/classes/AccountProcessor.cls
@@ -1,4 +1,6 @@
-public class AccountProcessor {
+// Apex class to update list of accounts with total chld contacts 
+
+public with sharing class  AccountProcessor {
     
     
     @future
@@ -9,21 +11,23 @@ public class AccountProcessor {
         
         if(accIDS != Null){
             
-            for(Account acc : [Select id,(Select id from Contacts) from Account where ID IN :accIDS]){
+            for(Account acc : [Select id,(Select id from Contacts) from Account where ID IN :accIDS WITH SECURITY_ENFORCED]){
                 
                 accContact.put(acc.Id,acc.Contacts);
             }
-            
-            for(ID accKey : accContact.keyset())
-            {
-                Account acc = new Account(ID = accKey);
-                acc.Number_Of_Contacts__c = accContact.get(accKey).size();
-                accts.add(acc);
+           
+                
+                for(ID accKey : accContact.keyset())
+                {
+                    Account acc = new Account(ID = accKey);
+                    acc.Number_Of_Contacts__c = accContact.get(accKey).size();
+                    accts.add(acc);
+                }
+            if(accts.Number_Of_Contacts__c.isUdateable.isUdateable()){    
+                update accts;
             }
-            
-            update accts;
+
         }
     }
-    
     
  }
