--- a/force-app/main/default/classes/TestDataFactory.cls
+++ b/force-app/main/default/classes/TestDataFactory.cls
@@ -3,7 +3,7 @@ public class TestDataFactory {
     public static List<Contact> createContacts(Integer numContacts, ID accID, String lastName){
        List<Contact> contacts = new List<Contact>();
        
-        for(Integer i=0; i<=numContacts; i++){
+        for(Integer i=0; i<numContacts; i++){
             
             Contact cnt = new Contact (
                 AccountId = accID,
@@ -16,7 +16,7 @@ public class TestDataFactory {
     public static List<Account> createAccounts(Integer numAccounts){
         List<Account> accounts = new List<Account>();
         
-        for(Integer i = 0; i<=numAccounts; i++){
+        for(Integer i = 0; i<numAccounts; i++){
             account acc = new account(name = 'test' + i);
             accounts.add(acc);
         }
